# personal-ai-wiki

./: .gitignore  AGENTS.md  DEFERRED.md  LLM-INSTRUCTIONS.md  README.md  config.yml
.obsidian/: graph.json  workspace.json
manual/: config-reference.html  getting-started.html  index.html  ingesting-sources.html  personal-notes.html  proposals-workflow.html  querying-the-wiki.html  running-scripts.html  triaging-newsletters.html  url-fetching.html
personal-wiki-agent/: FUTURE_WORK.md  PRD.md  README.md  pyproject.toml
personal-wiki-agent/app/: __init__.py  cli.py  config.default.toml  config.local.example.toml  config.py  engine.py  models.py  output_schema.py  query_instructions.md  runtime_logging.py  server.py
personal-wiki-agent/app/evals/: models.yaml  scenarios.yaml
personal-wiki-agent/app/prompts/: answer_format.md  system.md
personal-wiki-agent/app/tools/: __init__.py  get_index.py  read_file.py  read_personal_context.py  recent_changes.py  search_repo.py
podcast/: block-1-state-of-play.md  block-2-tools-workflows.md  block-3-concepts-trends-training.md  directions.md
proposals/: 2026-04-10-muse-spark.md  2026-04-10-postman-ai-org-chart.md  2026-04-14-curiosity-driven-imagination.md  2026-04-15-every-managed-agents-vibe-check.md  2026-04-16-openai-agents-sdk-evolution.md  2026-04-22-agent-org-patterns.md  2026-04-22-ai-security-surface.md  2026-04-22-gemini-deep-research-update.md  2026-04-22-gpt-image-2.md  2026-04-22-hermes-claude-code-harness.md  2026-04-22-hf-ml-intern.md  2026-04-22-legacy-xlsx-ingest-now-batch.md  2026-04-24-autonomy-ladder.md  (+10 more)
(+1044 files in other folders)
